Title padding top change

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ img{max-width:100%}
 </div>
 <!-- HEADER -->
 <!-- TITLE -->
-<div style="padding: 2px; border-radius: 50px; text-align: center; font-size: 14pt; margin-top: 2em; background-color: #234465;">
+<div style="padding: 2px; border-radius: 50px; text-align: center; font-size: 14pt; margin-top: 10px; background-color: #234465;">
 <div style="margin: 3px; padding: 5px; border-radius: 15px; border: 3px double #ffa000; border-image: none;">
 <font color="#ffa000" face="Arial Black" size="3">
 <!-- TITLE -->
